<resources>
    <string name="app_name">NoteOn</string>

    <string name="email_text_input_hint">Email</string>
    <string name="password_text_input_hint">Пароль</string>
    <string name="login_text_view">Добро пожаловать</string>
    <string name="continue_button">Продолжить</string>
    <string name="forgot_password_button_text">Забыли пароль?</string>
    <string name="create_new_account_text">Создать новый аккаунт</string>

    <string name="menu_item_notes">Заметки</string>
    <string name="menu_item_search">Поиск</string>
    <string name="menu_item_setting">Настройки</string>

    <string name="message_password_mismatched">Пароль и подтверждение пароля не совпадают</string>

    <string name="error_message_email_invalid">Проверьте корректность вашего email</string>
    <string name="error_message_password_invalid">Пароль должен содержать от 8 до 50 символов</string>
    <string name="error_loading_title">Не удалось войти в аккаунт</string>
    <string name="error_signup_title">Не удалось создать аккаунт</string>
    <string name="search_bar_hint">Поиск по заметкам</string>

    <string name="text_no_connectivity">Отсутствует подключение к интернету</string>
    <string name="text_connectivity">Снова онлайн</string>

    <string name="hint_field_title">Заголовок</string>
    <string name="hint_field_body">Тело заметки</string>

    <string name="message_note_error">Что-то пошло не так</string>

    <string name="menu_pin">Закрепить</string>
    <string name="menu_delete">Удалить</string>
    <string name="menu_done">Готово</string>
    <string name="menu_undo">Отменить</string>
    <string name="menu_redo">Повторить</string>

    <string name="alert_delete_title">Удалить?</string>
    <string name="alert_delete_message">Уверены, что хотите удалить заметку?</string>
    <string name="alert_positive">Да</string>
    <string name="alert_negative">Нет</string>

    <string name="extended_fab_content_desc">Создание новой заметки</string>
    <string name="extended_fab_label">Создать</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_insert_link">Вставить ссылку</string>
    <string name="action_insert_image">Вставить картинку</string>
    <string name="action_insert_table">Вставить таблицу</string>
    <string name="message_invalid_number_rows_columns">Неверное количество строк или столбцов</string>
    <string name="action_cancel">Отмена</string>
    <string name="action_insert">Вставить</string>

    <string name="link_input_title_hint">Название (необязательно)</string>
    <string name="link_input_url_hint">Ссылка</string>
    <string name="note_edit_fab_content_desc">Открыть редактор заметки</string>
    <string name="hint_number_columns">Число столбцов</string>
    <string name="hint_number_rows">количество рядов</string>
    <string name="hint_image_description">Описание</string>
    <string name="hint_image_path">Путь до изображения</string>
    <string name="extended_fab_content_desc_folder">Создать новую папку</string>
    <string name="toolbar_foolders_title">Папки</string>
    <string name="btn_text_create">Создать</string>
    <string name="btn_text_cancel">Отменить</string>
    <string name="folder_name_text_input_hint">Название папки</string>
    <string name="menu_action_move">Переместить заметку в другую папку</string>
</resources>