<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.list_notes.ListNotesFragment"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        >
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mainToolbar"
            app:title="@string/toolbar_foolders_title"
            app:titleTextAppearance="@style/TextAppearance.H2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/normal_8"
            app:menu="@menu/main_menu"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="bottom"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textNetworkStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorError"
            android:drawablePadding="@dimen/normal_100"
            android:gravity="center"
            android:padding="@dimen/normal_8"
            android:textColor="?attr/colorOnError"
            android:visibility="gone"
            tools:text="@string/text_no_connectivity" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeToRefreshFolders"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_anchor="@id/appBarLayout"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:ignore="PrivateResource"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFolders"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNewFolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/extended_fab_content_desc_folder"
        app:srcCompat="@drawable/ic_add_24"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>